new update on Rooster Regulation

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ../index"
+    "test": "mocha test/**/*_test.js"
   },
   "author": "anthony awa",
   "license": "ISC",
